import org.openapitools.generator.gradle.plugin.tasks.GenerateTask
buildscript {
	dependencies {
		classpath("org.openapitools:openapi-generator-gradle-plugin:7.1.0")
	}
}
plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
	id "org.openapi.generator" version "7.1.0"
}
ext {
	set('mapstructVersion', "1.5.5.Final")
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
	set('cucumberVersion', "7.12.1")
	set('junitPlatformSuite', "1.9.0")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	implementation('org.eclipse.persistence:eclipselink:2.7.7')

	// Mapstruct
	implementation("org.mapstruct:mapstruct:${mapstructVersion}")
	annotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")
	testAnnotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")
	//postgres
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql'


	// OPENAPI
	implementation('io.swagger:swagger-annotations:1.6.11')
	implementation('org.openapitools:jackson-databind-nullable:0.2.6')
	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0')

	// Cucumber
	testImplementation("org.junit.platform:junit-platform-suite:${junitPlatformSuite}")
	testImplementation("org.junit.platform:junit-platform-suite-api:${junitPlatformSuite}")
	testImplementation("io.cucumber:cucumber-core:${cucumberVersion}")
	testImplementation("io.cucumber:cucumber-java:${cucumberVersion}")
	testImplementation("io.cucumber:cucumber-java8:${cucumberVersion}")
	testImplementation("io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}")
	testImplementation("io.cucumber:cucumber-spring:${cucumberVersion}")
}

openApiGenerate {
	generatorName = "spring"
	inputSpec = "$rootDir/openapi/main.yaml".toString()
	outputDir = layout.buildDirectory.file("generated/sources/openapi").get().asFile.path
	apiPackage = "cm.domeni.demo.api"
	modelPackage = "cm.domeni.demo.dto"
	configOptions = [
			dateLibrary         : "java8-localdatetime",
			library             : "spring-boot",
			interfaceOnly       : "true",
			useTags             : "true",
			skipDefaultInterface: "true",
			useSpringBoot3      : "true",
			openApiNullable     : "false"
	]
	typeMappings = [
			time: "java.time.LocalTime",
	]
}

tasks.register('e2eTest', JavaExec) {
	dependsOn assemble, testClasses
	mainClass = "io.cucumber.core.cli.Main"
	classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
	jvmArgs = ["--enable-preview"]
	args = [
			'--plugin', 'html:build/cucumber-reports/html/index.html',
			'--plugin', 'json:build/cucumber-reports/json/cucumber.json',
			'--plugin', 'junit:build/cucumber-reports/json/cucumber.xml',
			'--glue', 'cm.domeni.e2e', 'src/test/resources/cm/domeni/e2e/features/'
	]
}

sourceSets.main.java.srcDir layout.buildDirectory.file("generated/sources/openapi/src/main/java").get().asFile.path

compileJava.dependsOn(
		tasks.openApiGenerate
)
tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}
